usr/src/uts/common/io/rsm/rsm.c
@@ -23,6 +23,7 @@
  * Use is subject to license terms.
  * Copyright 2012 Milan Jurik. All rights reserved.
  * Copyright (c) 2016 by Delphix. All rights reserved.
+ * Copyright 2017 Joyent, Inc.
  */
 
 
@@ -2419,9 +2420,7 @@ rsm_bind(rsmseg_t *seg, rsm_ioctlmsg_t *msg, intptr_t dataptr, int mode)
 
 static void
 rsm_remap_local_importers(rsm_node_id_t src_nodeid,
-    rsm_memseg_id_t ex_segid,
-    ddi_umem_cookie_t cookie)
-
+    rsm_memseg_id_t ex_segid, ddi_umem_cookie_t cookie)
 {
 	rsmresource_t	*p = NULL;
 	rsmhash_table_t *rhash = &rsm_import_segs;
@@ -3644,10 +3643,8 @@ rsm_intr_segconnect(rsm_node_id_t src, rsmipc_request_t *req)
  *
  */
 static void
-rsm_force_unload(rsm_node_id_t src_nodeid,
-    rsm_memseg_id_t ex_segid,
+rsm_force_unload(rsm_node_id_t src_nodeid, rsm_memseg_id_t ex_segid,
     boolean_t disconnect_flag)
-
 {
 	rsmresource_t	*p = NULL;
 	rsmhash_table_t *rhash = &rsm_import_segs;
@@ -6762,7 +6759,6 @@ rsm_disconnect(rsmseg_t *seg)
 	return (DDI_SUCCESS);
 }
 
-/*ARGSUSED*/
 static int
 rsm_chpoll(dev_t dev, short events, int anyyet, short *reventsp,
     struct pollhead **phpp)
@@ -6784,8 +6780,6 @@ rsm_chpoll(dev_t dev, short events, int anyyet, short *reventsp,
 		return (ENXIO);
 	}
 
-	*reventsp = 0;
-
 	/*
 	 * An exported segment must be in state RSM_STATE_EXPORT; an
 	 * imported segment must be in state RSM_STATE_ACTIVE.
@@ -6794,7 +6788,11 @@ rsm_chpoll(dev_t dev, short events, int anyyet, short *reventsp,
 
 	if (seg->s_pollevent) {
 		*reventsp = POLLRDNORM;
-	} else if (!anyyet) {
+	} else {
+		*reventsp = 0;
+	}
+
+	if ((*reventsp == 0 && !anyyet) || (events & POLLET)) {
 		/* cannot take segment lock here */
 		*phpp = &seg->s_poll;
 		seg->s_pollflag |= RSM_SEGMENT_POLL;
@@ -8288,7 +8286,7 @@ rsmmap_access(devmap_cookie_t dhp, void *pvt, offset_t offset, size_t len,
 
 static int
 rsmmap_dup(devmap_cookie_t dhp, void *oldpvt, devmap_cookie_t new_dhp,
-	void **newpvt)
+    void **newpvt)
 {
 	rsmseg_t	*seg = (rsmseg_t *)oldpvt;
 	rsmcookie_t	*p, *old;
@@ -8339,8 +8337,8 @@ rsmmap_dup(devmap_cookie_t dhp, void *oldpvt, devmap_cookie_t new_dhp,
 
 static void
 rsmmap_unmap(devmap_cookie_t dhp, void *pvtp, offset_t off, size_t len,
-	devmap_cookie_t new_dhp1, void **pvtp1,
-	devmap_cookie_t new_dhp2, void **pvtp2)
+    devmap_cookie_t new_dhp1, void **pvtp1,
+    devmap_cookie_t new_dhp2, void **pvtp2)
 {
 	/*
 	 * Remove pvtp structure from segment list.
